--- a/WebpageTest/mysite/intellishop/templates/intellishop/register.html
+++ b/WebpageTest/mysite/intellishop/templates/intellishop/register.html
@@ -99,8 +99,8 @@
                                 <label for="hobbies" class="col-sm-3 col-form-label">Hobbies:</label>
                                 <div class="col-sm-9">
                                     <div class="d-flex flex-wrap gap-2">
-                                        <input type="checkbox" class="btn-check hobby-checkbox" id="hobby-lifestyle" value="lifestyle" autocomplete="off">
-                                        <label class="btn btn-sm btn-outline-primary rounded-pill" for="hobby-lifestyle">Lifestyle & Personal Needs</label>
+                                        <input type="checkbox" class="btn-check hobby-checkbox" id="hobby-Lifestyle" value="lifestyle" autocomplete="off">
+                                        <label class="btn btn-sm btn-outline-primary rounded-pill" for="hobby-Lifestyle">Lifestyle & Personal Needs</label>
                                         
                                         <input type="checkbox" class="btn-check hobby-checkbox" id="hobby-home" value="home" autocomplete="off">
                                         <label class="btn btn-sm btn-outline-success rounded-pill" for="hobby-home">Home & Garden</label>
