Mouse on coupon's add-to-favorites -> Click To Save

--- a/WebpageTest/mysite/intellishop/templates/intellishop/filter_search.html
+++ b/WebpageTest/mysite/intellishop/templates/intellishop/filter_search.html
@@ -687,7 +687,7 @@ document.addEventListener('DOMContentLoaded', function() {
                                 </a>
                             ` : ''}
                             <div class="like-icon-col">
-                                <span class="like-fav-text">Favorites <span class="like-icon" title="אהבתי">&#10084;</span> Add</span>
+                                <span class="like-fav-text">Favorites <span class="like-icon" title="Click To Save">&#10084;</span> Add</span>
                             </div>
                         </div>
                         <hr>
