Dynamic check for Max Price  byrice by fixed_amount from MongoDB and display at price range bar

--- a/WebpageTest/mysite/intellishop/templates/intellishop/filter_search.html
+++ b/WebpageTest/mysite/intellishop/templates/intellishop/filter_search.html
@@ -51,7 +51,7 @@
             <div class="filter-options">
                 <div class="price-range-slider-container">
                     <span class="min-price-label">ILS{{ min_price }}</span>
-                    <input type="range" class="price-range-slider" min="{{ min_price }}" max="{{ max_price }}" value="[{{ min_price }}, {{ max_price }}]">
+                    <input type="range" class="price-range-slider" min="{{ min_price }}" max="{{ max_price }}" value="{{ max_price }}">
                     <span class="max-price-label">ILS{{ max_price }}</span>
                 </div>
             </div>
